--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <script defer src="./lib/templater.js"></script>
     <script defer src="./main.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Simple Idler!</title>
 </head>
 <body>
     <div id="main-wrapper">
         <h3 templ id="money-txt">${{money}}</h3>
+        <a title="Project repository" target="_blank" href="https://github.com/Jacoby-Y/super_simple_idle" id="github-link"><img src="./assets/GitHub-Mark.png"></a>
         <div id="menu-wrapper">
             <div id="money-border"></div>
             <div id="menu-content">
                 <h3 id="menu-title">Upgrades!</h3>
                 <div class="upgrade-btn" id="per_click"><h3><span templ>{{per_click_num}}</span> per click ($<span templ>{{per_click_cost}}</span>)</h3></div>
                 <div class="upgrade-btn" id="per_sec"><h3><span templ>{{per_sec_num}}</span> per second ($<span templ>{{per_sec_cost}}</span>)</h3></div>
+                <div class="upgrade-btn" id="unlock_click_mult"><h3>Click multiplier ($2500)</h3></div>
+                <div class="upgrade-btn" id="unlock_idle_mult"><h3>Idle multiplier ($2500)</h3></div>
             </div>
         </div>
         <img id="menu-btn" style="width: 32px;" src="./assets/menu.svg">
@@ -23,6 +27,9 @@
             <h3 id="per-click-info" templ>+{{per_click}}</h3>
             <h3 id="per-sec-info" templ>+{{per_sec}}/sec</h3>
         </div>
+        <div class="multiplier" id="click-mult-btn"><h3 templ>+1% per click<br>current: {{click_mult_lvl}}%</h3></div>
+        <div class="multiplier" id="idle-mult-btn"><h3 templ>+1% per sec<br>current: {{idle_mult_lvl}}%</h3></div>
+        <div id="tip"><h3 id="tip-txt"></h3></div>
     </div>
 </body>
 </html>
