--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="upgrade-btn" id="per_sec"><h3><span templ>{{per_sec_num}}</span> per second ($<span templ>{{per_sec_cost}}</span>)</h3></div>
                 <div class="upgrade-btn" id="unlock_click_mult"><h3>Click multiplier ($2500)</h3></div>
                 <div class="upgrade-btn" id="unlock_idle_mult"><h3>Idle multiplier ($2500)</h3></div>
+                <div class="upgrade-btn" id="prestige_btn"><h3 templ>Prestige (${{prestige_cost}})</h3></div>
             </div>
         </div>
         <img id="menu-btn" style="width: 32px;" src="./assets/menu.svg">
