--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <script src="./lib/cash.js"></script>
     <script defer src="./lib/templater.js"></script>
-    <script defer src="./main.js"></script>
+    <script defer src="./src/data.js"></script>
+    <script defer src="./src/main.js"></script>
     <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Simple Idler!</title>
