--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </div>
         <img id="menu-btn" style="width: 32px;" src="./assets/menu.svg">
         <div id="main-btn">
-            <h3 id="per-click-info" templ>+{{per_click}}</h3>
-            <h3 id="per-sec-info" templ>+{{per_sec}}/sec</h3>
+            <h3 id="per-click-info" templ>+{{per_click_display}}</h3>
+            <h3 id="per-sec-info" templ>+{{per_sec_display}}/sec</h3>
         </div>
         <div class="multiplier" id="click-mult-btn"><h3 templ>+1% per click<br>current: {{click_mult_lvl}}%</h3></div>
-        <div class="multiplier" id="idle-mult-btn"><h3 templ>+1% per sec<br>current: {{idle_mult_lvl}}%</h3></div>
+        <div class="multiplier" id="idle-mult-btn"><h3 templ>+0.2% per sec<br>current: {{idle_mult_lvl}}%</h3></div>
         <div id="tip"><h3 id="tip-txt"></h3></div>
     </div>
 </body>
