--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <script src="./lib/cash.js"></script>
-    <!-- <script defer src="./lib/templater.js"></script> -->
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
     <script defer src="./lib/watcher.js"></script>
     <script defer src="./src/check_version.js"></script>
     <script defer src="./src/data.js"></script>
     <script defer src="./src/main.js"></script>
+    <script defer src="./src/btn_events.js"></script>
+
     <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+
     <title>Simple Idler!</title>
 </head>
 <body>
@@ -34,15 +38,30 @@
         </div>
         <div class="multiplier" id="click-mult-btn"><h3 watch>+1% per click<br>current: {click_mult_lvl}%</h3></div>
         <div class="multiplier" id="idle-mult-btn"><h3 watch>+0.2% per sec<br>current: {idle_mult_lvl}%</h3></div>
+        
         <div id="tip"><h3 id="tip-txt"></h3></div>
+
+        <img id="pres-menu-btn" style="width: 32px;" src="./assets/menu.svg">
+        <div id="pres-menu-wrapper">
+            <h3 id="pres-menu-title" watch>Points: {prestige_points}</h3>
+            <div class="upgrade-btn" id="prest-btn-1"><h3 watch>Extra Prestige Bonus</h3></div>
+            <div class="upgrade-btn" id="prest-btn-2"><h3 watch>Starting Money</h3></div>
+            <div class="upgrade-btn" id="prest-btn-3"><h3 watch>Cheaper Per Click</h3></div>
+            <div class="upgrade-btn" id="prest-btn-4"><h3 watch>Cheaper Per Sec</h3></div>
+        </div>
     </div>
     <div class="poppup">
         <h3 class="poppup-title">Prestige?</h3>
-        <p class="poppup-info">
+        <p class="poppup-info" watch>
             Prestiging lets you start over, but with extra income and new content to explore!<br>
-            Each prestige gives you a 50% bonus to all income!
+            Each prestige gives you a 50% bonus to all income and <em>prestige points</em>.<br>
+            The amount of prestige points depends on how much money you're gaining per click and per second.<br>
+            If you prestige now, you will gain {calc_points}.
         </p>
-        <div class="poppup-btn" onclick="do_prestige()">Ok!</div>
+        <div class="poppup-option-wrapper">
+            <div class="poppup-option" onclick="do_prestige()">Ok!</div>
+            <div class="poppup-option" onclick="close_poppup()">Nevermind...</div>
+        </div>
     </div>
     <div class="poppup">
         <h3 class="poppup-title">Welcome back!</h3>
